<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activities.LoginActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="30dp">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center"
                        android:src="@mipmap/logo_dark"/>

                    <TextView
                        android:id="@+id/login_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:textSize="17dp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center">

                        <ImageView
                            android:id="@+id/facebook_btn"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/ic_facebook"/>

                        <ImageView
                            android:id="@+id/google_btn"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="20dp"
                            android:src="@drawable/ic_google"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/logo_desc"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:textSize="13dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:background="@color/black"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:layout_centerVertical="true"/>

                            <TextView
                                android:layout_width="40dp"
                                android:layout_height="match_parent"
                                android:textColor="@color/black"
                                android:background="@color/white"
                                android:text="OR"
                                android:textSize="13dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:gravity="center"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"/>

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp">

                        <EditText
                            android:id="@+id/email_txt"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/border_text"
                            android:textColor="@color/black"
                            android:textSize="15dp"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:orientation="horizontal"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp">

                        <EditText
                            android:id="@+id/pwd_txt"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/border_text"
                            android:inputType="textPassword"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/black"
                            android:textSize="15dp"
                            android:hint="@string/password"
                            android:layout_marginBottom="5dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/forgot_password_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/login_forgot_password"
                        android:textSize="13dp"/>

                    <TextView
                        android:id="@+id/forgot_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:text="@string/login_forgot_password_btn"
                        android:textColorLink="@color/link"
                        android:textSize="13dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/next_btn"
                        android:layout_width="250dp"
                        android:layout_height="45dp"
                        android:background="@drawable/round_btn"
                        android:textColor="@color/white"
                        android:text="@string/login_next_btn"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/register_desc_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/login_desc"
                        android:textColor="@color/black"
                        android:textSize="13dp"/>

                    <TextView
                        android:id="@+id/register_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/register_to"
                        android:layout_marginLeft="10dp"
                        android:textColorLink="@color/link"
                        android:textSize="13dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/login_next1"
                        android:textSize="11dp"/>

                    <TextView
                        android:id="@+id/privacy_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/login_next2"
                        android:layout_marginLeft="5dp"
                        android:textColorLink="@color/link"
                        android:textSize="12dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/login_next3"
                        android:layout_marginLeft="5dp"
                        android:textSize="11dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="50dp"
                    android:gravity="center">

<!--                    <TextView-->
<!--                        android:id="@+id/skip_btn"-->
<!--                        android:layout_width="250dp"-->
<!--                        android:layout_height="45dp"-->
<!--                        android:textColor="@color/black"-->
<!--                        android:text="@string/login_skip"-->
<!--                        android:textStyle="bold"-->
<!--                        android:textSize="16sp"-->
<!--                        android:gravity="center"/>-->

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@color/half_transfer"
        android:clickable="true"
        android:elevation="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp" />

    </LinearLayout>

</RelativeLayout>
