<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activities.IntroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/title_layout"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleTxt"
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:layout_marginLeft="50dp"
                android:gravity="center"
                android:text="@string/menu_company"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/back_btn"
                android:layout_width="?actionBarSize"
                android:layout_height="?actionBarSize"
                android:layout_alignParentLeft="true" >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_back"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="20dp"/>

            </RelativeLayout>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:textSize="12sp"
                        android:text="@string/title_app_version"
                        android:textColor="@color/crop_back"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:maxLines="1"
                        android:text="@string/version_num"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:paddingTop="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:textSize="12sp"
                        android:text="@string/title_app_name"
                        android:textColor="@color/crop_back"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:maxLines="1"
                        android:text="@string/app_name"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:paddingTop="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:textSize="12sp"
                        android:text="@string/title_email"
                        android:textColor="@color/crop_back"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:maxLines="1"
                        android:text="hangerbox2019@gmail.com"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:paddingTop="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:textSize="12sp"
                        android:text="@string/title_website"
                        android:textColor="@color/crop_back"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:maxLines="1"
                        android:text="hanger-box.com"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:paddingTop="5dp"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>
